# habit-builder

./: .gitignore  README.md  cabal.project  flake.nix  habit-builder.cabal  habit-example  hie.yaml
app/: Main.hs
src/: Lib.hs
src/HabitBuilder/: Usecases.hs
src/HabitBuilder/Adapters/Into/: Console.hs
src/HabitBuilder/Domains/: Habit.hs
src/HabitBuilder/Ports/: Clock.hs  Controller.hs  Getter.hs  Persister.hs  Printer.hs  Usecases.hs
test/: Spec.hs
