cabal-version:   2.4
name:            habit-builder
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          Dima Kurilo
maintainer:      Dima Kurilo <dkurilo@gmail.com>
copyright:       2024 Dima Kurilo
tested-with:     GHC ==9.6.4
extra-doc-files:
  CHANGELOG.md
  README.md

-- category:
-- description:     description
-- synopsis:        one-line synopsis
-- homepage:        https://github.com/FIXME/habit-builder#readme
-- source-repository head
--   type:     git
--   location: git://github.com/DKurilo/habit-builder.git

common common-options
  build-depends:    base >=4.9 && <5
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    HabitBuilder.Adapters.Into.Console
    , HabitBuilder.Adapters.Out.ConsolePrinter
    , HabitBuilder.Adapters.Out.FileGetter
    , HabitBuilder.Adapters.Out.FilePersister
    , HabitBuilder.Adapters.Out.SystemClock
    , HabitBuilder.Domains.Habit
    , HabitBuilder.Ports.Clock
    , HabitBuilder.Ports.Controller
    , HabitBuilder.Ports.Getter
    , HabitBuilder.Ports.Persister
    , HabitBuilder.Ports.Printer
    , HabitBuilder.Ports.Usecases
    , HabitBuilder.Usecases
  build-depends:
    , containers
    , mtl
    , split
    , time

executable habit-builder-console
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  habit-builder
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite habit-builder-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , hspec
    , HUnit
    , habit-builder
    , QuickCheck

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

benchmark habit-builder-bench
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Main.hs
  build-depends:
    , criterion
    , habit-builder

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
